--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
+    "@auth0/nextjs-auth0": "^2.5.0",
+    "auth0": "^3.3.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.6",
-    "next": "13.3.0",
+    "next": "^13.3.0",
+    "oidc-token-hash": "^5.0.2",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
